--- a/others/language/python/flask/projects/flaskMarket/templates/base.html
+++ b/others/language/python/flask/projects/flaskMarket/templates/base.html
@@ -23,11 +23,11 @@
       <div class="collapse navbar-collapse" id=navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span>
+            <a class="nav-link" href="{{ url_for('home_page') }}">Home <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Market</a>
+            <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
           </li>
         </ul>
         <ul class="navbar-nav">
