--- a/others/language/python/flask/projects/flaskMarket/market/templates/base.html
+++ b/others/language/python/flask/projects/flaskMarket/market/templates/base.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="#">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+            <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
           </li>
         </ul>
 
