--- a/others/language/python/flask/projects/flaskMarket/market/templates/base.html
+++ b/others/language/python/flask/projects/flaskMarket/market/templates/base.html
@@ -32,7 +32,7 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="{{ url_for('login_page') }}">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
